--- a/index.html
+++ b/index.html
@@ -14,14 +14,12 @@
 
     <main>
         <div id="refresh">
-            <button> <span 
-                class="material-symbols-outlined">
-                refresh
-                </span> </button>
+                    <button onClick="window.location.reload();"><span 
+                    class="material-symbols-outlined">
+                    refresh
+                    </span></button>
         </div>
-        <div id="pokemon-container">
-
-            
+        <div id="pokemon-container">            
         </div>
     </main>
 </body>
