--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         <div id="pokemon-container">            
         </div>
     </main>
+    <footer>
+        <div class>
+            <h2 class="text-footer">Powered by: Byron Ramírez</h2>
+        </div>
+    </footer>
 </body>
 <script src="main.js"></script>
 </html>
